--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <button class="close-x" onclick="closePopup()">×</button>
       <h2>Join Telegram</h2>
       <p>Join Our Channel<strong> Onee Cric </strong> For Match Prediction And Updates</p>
-      <a id="joinLink" href="https://t.me/+rujt-AIkT28yMGI1" target="_blank" rel="noopener noreferrer" style="text-decoration:none;display:block">
+      <a id="joinLink" href="https://t.me/+jWWYoYpYlqgwMWM1" target="_blank" rel="noopener noreferrer" style="text-decoration:none;display:block">
         <button id="joinButton" class="btn" type="button">Join Now</button>
       </a>
       <button id="closeButton" class="btn" type="button" onclick="closePopup()">Maybe Later</button>
@@ -193,4 +193,5 @@
     });
   </script>
 </body>
+
 </html>
